--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -7,6 +7,7 @@
     "save": "Save",
     "cancel": "Cancel",
     "changes": "Changes",
+    "contact_us": "Contact us",
     "save_changes": "@:common.save @.lower:common.changes",
     "hello_value": "@:common.hello {value}",
     "select_language": "@:common.select @.lower:common.language",
