--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -11,7 +11,8 @@
     "save_changes": "@:common.save @.lower:common.changes",
     "hello_value": "@:common.hello {value}",
     "select_language": "@:common.select @.lower:common.language",
-    "ticket": "no ticket | one ticket | {count} tickets"
+    "ticket": "no ticket | one ticket | {count} tickets",
+    "explore": "Explore"
   },
   "services": {
     "insight": "Insight",
