fix(assets): Update translations and improve README image embedding documentation

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -23,7 +23,7 @@
   },
   "services": {
     "insight": "Insight",
-    "nortic-id": "Lobby",
+    "nortic-id": "Home",
     "eventsystem": "Event Manager",
     "help-center": "Help",
     "lobby": "@:services.nortic-id"
