feat(assets): add accessibility text for new tab/windows in locales

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -15,6 +15,9 @@
     "explore": "Explore",
     "loading": "Loading"
   },
+  "accessibility": {
+    "new_tab": "Opens in a new tab/window"
+  },
   "permissions": {
     "scopes": {
       "manage": "Manage",
