--- a/assets/locales/sv.json
+++ b/assets/locales/sv.json
@@ -15,6 +15,9 @@
     "explore": "Utforska",
     "loading": "Laddar"
   },
+  "accessibility": {
+    "new_tab": "Öppnas i ny flik eller nytt fönster"
+  },
   "permissions": {
     "scopes": {
       "manage": "Hantera",
