--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -21,7 +21,7 @@
   "roles": {
     "administrator_role": "Administrator",
     "event_manager_user_role": "Event Manager",
-    "insight_user_role": "Insight",
+    "insights_user_role": "Insight",
     "owner_role": "Owner",
     "user_role": "User"
   },
