--- a/assets/locales/sv.json
+++ b/assets/locales/sv.json
@@ -19,11 +19,26 @@
     "new_tab": "Öppnas i ny flik eller nytt fönster"
   },
   "roles": {
-    "administrator_role": "Administratör",
-    "event_manager_user_role": "Event Manager",
-    "insights_user_role": "Insight",
-    "owner_role": "Ägare",
-    "user_role": "Användare"
+    "administrator_role": {
+      "name": "Administratör",
+      "description": "Behörighet till att administrera användare och full behörighet till flera tjänster"
+    },
+    "event_manager_user_role": {
+      "name": "Event Manager",
+      "description": "Behörighet till Eventsystem"
+    },
+    "insights_user_role": {
+      "name": "Insight",
+      "description": "Behörighet till Insight"
+    },
+    "owner_role": {
+      "name": "Ägare",
+      "description": "Full behörighet till organisationen och tjänster"
+    },
+    "user_role": {
+      "name": "Användare",
+      "description": "Behörighet till dashboard"
+    }
   },
   "permissions": {
     "scopes": {
