--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -21,23 +21,23 @@
   "roles": {
     "administrator_role": {
       "name": "Administrator",
-      "description": "Behörighet till att administrera användare och full behörighet till flera tjänster"
+      "description": "Acccess to user administration and full access to multiple services"
     },
     "event_manager_user_role": {
       "name": "Event Manager",
-      "description": "Behörighet till Eventsystem"
+      "description": "Access to Event System"
     },
     "insights_user_role": {
       "name": "Insight",
-      "description": "Behörighet till Insight"
+      "description": "Access to Insight"
     },
     "owner_role": {
       "name": "Owner",
-      "description": "Full behörighet till organisationen och tjänster"
+      "description": "Full access to the organization and services"
     },
     "user_role": {
       "name": "User",
-      "description": "Behörighet till dashboard"
+      "description": "Access to dashboard"
     }
   },
   "permissions": {
